# knowrob_pepper_openease

./: README.md
knowrob_pepper_openease/: CMakeLists.txt  README.md  package.xml
knowrob_pepper_openease/include/: pepper_openease_client.h
knowrob_pepper_openease/launch/: knowrob.launch  knowrob_pepper_full.launch
knowrob_pepper_openease/prolog/: init.pl
knowrob_pepper_openease/prolog/knowrob/: pepper_openease.pl
knowrob_pepper_openease/scripts/: pepper_oe_server.py  pepper_oe_server_test.py
knowrob_pepper_openease/src/: pepper_openease_client.cpp
knowrob_pepper_openease_msgs/: CMakeLists.txt  package.xml
knowrob_pepper_openease_msgs/srv/: PepperPointAt.srv  PepperSay.srv
