<package>
  <name>knowrob_pepper_openease</name>
  <version>0.1.0</version>
  <maintainer email="sasjonge@uni-bremen.de">Sascha Jongebloed</maintainer>
  <description>
    This package should allow controll of pepper over openEASE
  </description>

  <license>BSD</license>

  <author email="sasjonge@uni-bremen.de">Sascha Jongebloed</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob_common</build_depend>
  <build_depend>comp_temporal</build_depend>
  <build_depend>knowrob_mongo</build_depend>
  <build_depend>knowrob_vis</build_depend>
  <build_depend>knowrob_cram</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>knowrob_pepper_openease_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>swi-prolog</run_depend>
  <run_depend>swi-prolog-java</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>knowrob_pepper_openease_msgs</run_depend>
  <run_depend>knowrob_common</run_depend>
  <run_depend>comp_temporal</run_depend>
  <run_depend>knowrob_mongo</run_depend>
  <run_depend>knowrob_vis</run_depend>
  <run_depend>knowrob_cram</run_depend>

</package>