<package>
  <name>knowrob_pepper_openease_msgs</name>
  <version>0.1.0</version>
  <maintainer email="sasjonge@uni-bremen.de">Sascha Jongebloed</maintainer>
  <description>
    This package should allow controll of pepper over openEASE
  </description>

  <license>BSD</license>

  <author email="sasjonge@uni-bremen.de">Sascha Jongebloed</author>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
</package>